# wave_equation

./: .gitignore  CMakeLists.txt  run.sh
src/: Functions.hpp  WaveSolver.cpp  WaveSolver.hpp  define.h  main.cpp
